<resources>
    <string name="app_name" translatable="false">SetPwd</string>
    <string name="button_send">Set</string>
    <string name="edit_message">Enter password</string>
    <string name="edit_message_again">Enter password again</string>
    <string name="text_description">This app can help you set lockscreen password.\n\nPlease first give the Device Admin permission to this app.\n\nYour password must be 4 - 16 digits.\n\nNotice: On Android N or higher, Google restricts the use of the API. You may need to delete the original password before using this APP to set it up.
    </string>
    <string name="ensure_set_tittle">Set lock screen password?</string>
    <string name="device_admin" translatable="false">SetPwd</string>
    <string name="device_admin_description">To set lock screen password, you need to grant permission</string>
    <string name="ensure_set_text">"Your lock screen password will be set as "</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_warning">Warning</string>
    <string name="dialog_contains_special_characters">The password contains characters other than letters and numbers. Do you want to continue setting?</string>
    <string name="dialog_failed">Failed</string>
    <string name="dialog_failed_length">The password length does not meet the requirements.</string>
    <string name="dialog_failed_donotmatch">The passwords entered twice do not match.</string>
    <string name="checkbox_device_admin">Enable Device Admin</string>
    <string name="toast_set_maximum_failed_passwords_for_wipe">The maximum password attempt limit has been set to 5. If you need to remove the restriction, please cancel the device administrator privilege.</string>
    <string name="dialog_no_device_admin_permission">No device admin permission</string>
    <string name="menu_set_maximum_failed_passwords_for_wipe">Max failed passwords for wipe</string>
    <string name="menu_wipe_all_data">Wipe all data</string>
    <string name="toast_confirm_wipe_failed">Please check the text you entered</string>
    <string name="wipe_all_data_description">Are you sure you want to clear the data of this device? If you know the consequences of doing so and are still willing, enter \"yes\" in the input box below and click OK.</string>
    <string name="activitytittle_confirm_wipe">Confirm</string>
    <string name="menu_about">About</string>
    <string name="about_description">SetPwd can help you set a lock screen password in some inconvenient situations through device administrator permissions. \n\nFor example, when the device has its own security policies that prevent you from setting a password arbitrarily. \n\nAuthor: Richard Zheng \n\nSource: https://github.com/Richard-Zheng/SetPwd \n\nIf you have any problem, please post issues on GitHub.</string>
    <string name="version_update_history">Changelog</string>
    <string name="changelog_text" translatable="false"><big><big>1.2.2</big></big>\nAdd picker for the number of max failed passwords for wipe\nAdd the checkbox of show password\n\n<big><big>1.2.1</big></big>\nImprove the About page\n\n<big><big>1.2</big></big> \nAdd confirmation page before clearing data\nAdd about page\nAdd version update history (incomplete)\n\n<big><big>1.1</big></big>\nAdd additional feature: set the maximum number of password attempts before clearing data\nAdd additional function: clear all data\nAdd "Activate Device Admin" checkbox\n\n<big><big>1.0</big></big>\nInit version</string>
    <string name="description_set_maximum_failed_passwords_for_wipe">Maximum number of failed passwords for wipe\nNote: 0 means unlimited</string>
    <string name="checkbox_show_password">Show Password</string>
</resources>
